--- a/404.html
+++ b/404.html
@@ -3,9 +3,12 @@ permalink: /404.html
 layout: wrapper
 ---
 
-<div class="container text-center">
+<div class="container not-found text-center">
   <h1 class="mt-5">404</h1>
 
   <p><strong>Page not found :( </strong></p>
-  <p>The requested page either is under construction or nonexistent.</p>
+  <p>
+    Sorry, the requested page either is under construction or does not exist.
+  </p>
+  <img src="/assets/images/under_construction.png" alt="Under Construction" />
 </div>
